--- a/modulo1gad.html
+++ b/modulo1gad.html
@@ -513,7 +513,6 @@
         <p>La identidad y la dirección estratégica de una organización se construyen sobre una serie de procesos interconectados que definen su propósito, sus aspiraciones y su forma de operar.</p>
 
         <h3>5.1. Misión, Visión y Valores</h3>
-        <p>Estos tres pilares definen la esencia de una organización:</p>
         <div class="grid-container">
             <div class="grid-item">
                 <h4>Misión</h4>
@@ -730,6 +729,112 @@
         </div>
         <p><strong>Importancia en el Ámbito Laboral:</strong> La IE es vital para resolver conflictos, convencer a otros, trabajar en equipo, reconocer ideas ajenas y, especialmente, para que un líder gestione con éxito. La productividad aumenta cuando los miembros de un equipo utilizan correctamente la inteligencia emocional.</p>
 
+        <!-- Nueva Sección: Departamentos Comunes en una Empresa -->
+        <h2 id="seccion-8-departamentos-empresa">
+            <svg class="section-icon" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M19 12h-2V7h-3V3H8v4H5v5H3v2h2v5h3v-5h6v5h3v-5h2v-2zM8 12h8v5H8v-5z"/></svg>
+            8. Departamentos Comunes en una Empresa
+        </h2>
+        <p>Para un ingeniero, comprender la estructura interna de una empresa es tan vital como dominar su disciplina técnica. Las organizaciones se dividen en departamentos o áreas funcionales, cada una con responsabilidades específicas que, en conjunto, permiten la operación y el logro de objetivos. Este apunte describe los departamentos más comunes que se encuentran en la mayoría de las empresas, ofreciendo una visión clara de su rol y su contribución al ecosistema organizacional.</p>
+
+        <h3>8.1. Departamentos Clave y sus Roles</h3>
+        <p>Cada departamento posee funciones distintivas que, al integrarse, impulsan el desempeño general de la empresa.</p>
+
+        <div class="grid-container">
+            <div class="grid-item">
+                <h4>Dirección General / Gerencia 🏛️</h4>
+                <p><strong>Función Principal:</strong> Es la cabeza de la organización. Se encarga de definir la visión, misión, objetivos estratégicos y las políticas generales. Supervisa el rendimiento global de la empresa y toma las decisiones de mayor envergadura, guiando el rumbo de la compañía.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Recursos Humanos (RRHH) 👥</h4>
+                <p><strong>Función Principal:</strong> Gestiona el capital humano. Sus responsabilidades abarcan desde el reclutamiento, selección y contratación de personal, hasta la capacitación, el desarrollo profesional, la administración de nóminas, beneficios y el fomento de un ambiente laboral positivo.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Finanzas y Contabilidad 💰</h4>
+                <p><strong>Función Principal:</strong> Administra los recursos monetarios de la empresa. Incluye la planificación financiera, la elaboración y control de presupuestos, la contabilidad, el análisis de inversiones, la gestión de riesgos financieros y el cumplimiento de las obligaciones fiscales.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Marketing y Ventas 📈</h4>
+                <p><strong>Función Principal:</strong> Identifica las necesidades y tendencias del mercado para desarrollar estrategias de promoción de productos o servicios. Se encarga de la comunicación de marca, la generación de clientes potenciales y el cierre de ventas, asegurando que los productos lleguen al consumidor.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Operaciones / Producción ⚙️</h4>
+                <p><strong>Función Principal:</strong> Es el corazón de la creación de valor. Responsable de la planificación, ejecución y control de los procesos que transforman las entradas en los bienes o servicios finales de la empresa. También incluye la gestión de inventarios, el control de calidad y el mantenimiento.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Investigación y Desarrollo (I+D) / Ingeniería 🔬</h4>
+                <p><strong>Función Principal:</strong> Se enfoca en la innovación y la mejora continua. Aquí se investigan nuevas tecnologías, se diseñan y desarrollan prototipos de nuevos productos o servicios, y se optimizan los ya existentes, buscando la viabilidad técnica y económica de las soluciones.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Tecnologías de la Información (TI) 💻</h4>
+                <p><strong>Función Principal:</strong> Gestiona toda la infraestructura tecnológica de la empresa. Esto incluye el desarrollo, implementación y mantenimiento de sistemas (hardware, software, redes), el soporte técnico a los usuarios internos y la garantía de la ciberseguridad y protección de datos.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Logística y Cadena de Suministro 🚚</h4>
+                <p><strong>Función Principal:</strong> Planifica, implementa y controla el flujo eficiente de bienes, servicios e información desde el punto de origen hasta el punto de consumo. Abarca la gestión de proveedores, compras, transporte, distribución y la administración de almacenes.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Legal ⚖️</h4>
+                <p><strong>Función Principal:</strong> Asesora a la empresa en todos los asuntos legales, garantizando el cumplimiento normativo y gestionando los riesgos jurídicos. Se encarga de la elaboración y revisión de contratos y, en caso de ser necesario, la defensa legal de la organización.</p>
+            </div>
+            <div class="grid-item">
+                <h4>Calidad ✅</h4>
+                <p><strong>Función Principal:</strong> Establece y supervisa los estándares y procesos para asegurar que los productos o servicios cumplan consistentemente con las especificaciones y las expectativas del cliente. Implementa sistemas de gestión de calidad y promueve la mejora continua.</p>
+            </div>
+        </div>
+
+        <h3>2. Tabla Resumen de Departamentos</h3>
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Departamento</th>
+                        <th>Función Principal</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Dirección General</strong></td>
+                        <td>Establecer la visión y estrategia, supervisar el desempeño global.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Recursos Humanos (RRHH)</strong></td>
+                        <td>Gestionar el talento, desde la contratación hasta el desarrollo y bienestar del personal.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Finanzas y Contabilidad</strong></td>
+                        <td>Administrar los recursos monetarios y asegurar la salud financiera.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Marketing y Ventas</strong></td>
+                        <td>Identificar necesidades del mercado, promocionar y vender productos/servicios.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Operaciones / Producción</strong></td>
+                        <td>Crear bienes o servicios, gestionar procesos productivos y calidad.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>I+D / Ingeniería</strong></td>
+                        <td>Innovar, diseñar y desarrollar nuevos productos, servicios o procesos.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Tecnologías de la Información (TI)</strong></td>
+                        <td>Gestionar la infraestructura tecnológica y asegurar la seguridad de datos.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Logística y Cadena de Suministro</strong></td>
+                        <td>Planificar y controlar el flujo de bienes desde origen hasta consumo.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Legal</strong></td>
+                        <td>Asesorar en temas jurídicos y asegurar el cumplimiento normativo.</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Calidad</strong></td>
+                        <td>Establecer y supervisar estándares para asegurar productos/servicios de alta calidad.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
